margin for wrapping buttons, fixes #4

--- a/src/less/site/misc.less
+++ b/src/less/site/misc.less
@@ -88,6 +88,11 @@ html.cyclops {
     .nav.nav-stacked {
       max-width: 300px;
     }
+
+    >.btn {
+      margin-top: 5px;
+      margin-bottom: 5px;
+    }
   }
 
   .pl-actions {
